[project]
name = "aether"
version = "0.0.1.dev0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clear>=2.0.0",
    "rich>=14.1.0",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]


[project.scripts]
"at" = "aether.main:at"


[tool.uv]
package = true
